--- a/index.adoc
+++ b/index.adoc
@@ -4,35 +4,28 @@
 :data-uri:
 :icons:
 
-ifdef::openshift-origin[]
-Welcome to the OpenShift Origin documentation site. The OpenShift team maintains two versions of this documentation:
+ifdef::manageiq[]
+Welcome to the ManageIQ documentation site. The ManageIQ team maintains two versions of this documentation:
 
-* link:stable/welcome/index.html[Stable], which corresponds with the latest stable release of Origin
-* link:latest/welcome/index.html[Latest], which corresponds with the bleeding-edge, most recent feature documentation
+* link:anand/welcome/index.html[Anand], which corresponds with the Anand release of ManageIQ
+* link:nightly/welcome/index.html[Nightly], which corresponds with the bleeding-edge, most recent feature documentation
 
 Select one of the documentation sets above to get started!
-
-**Looking for OpenShift Online or OpenShift Enterprise?**
-Head on over to https://docs.openshift.com/[docs.openshift.com], our commercial documentation site.
 endif::[]
-ifdef::openshift-online,openshift-enterprise[]
-Welcome to the OpenShift documentation site. Here you will find a wealth of information on OpenShift's commercial product offerings.
+ifdef::cfme[]
+Welcome to the CloudForms Management Engine documentation site. Here you will find a wealth of information on Red Hat's commercial product offerings.
 
 [cols="2*", options="header"]
 |===
 |Product
 |Doc Versions
 
-|https://www.openshift.com/[OpenShift Online]
-|link:online/welcome/index.html[Online Documentation]
+|http://www.redhat.com/en/technologies/cloud-computing/cloudforms[Red Hat CloudForms]
+a|Choose the version of CloudForms Management Engine that you are after:
 
-|https://www.openshift.com/products/enterprise[OpenShift Enterprise]
-a|Choose the version of Enterprise that you are after:
-
-* link:enterprise/v2.0/welcome/index.html[Version 2.0]
-* link:enterprise/v2.1/welcome/index.html[Version 2.1]
+* link:cfme/5.3.z/welcome/index.html[Version 5.3 (CloudForms 3.1)]
 |===
 
-**Looking for OpenShift Origin?**
-Head on over to http://docs.openshift.org/[docs.openshift.org], our community documentation site.
+**Looking for ManageIQ?**
+Head on over to http://docs.manageiq.org/[docs.manageiq.org], our community documentation site.
 endif::[]
