--- a/getting_started/overview.adoc
+++ b/getting_started/overview.adoc
@@ -5,4 +5,4 @@
 :icons:
 :experimental:
 
-Welcome to OpenShift! These topics will help you get started with OpenShift and contain all the steps necessary so that you can begin creating your first application. 
+Welcome to ManageIQ! These topics will help you get started with ManageIQ and contain all the steps necessary so that you can begin. 
