--- a/welcome/index.adoc
+++ b/welcome/index.adoc
@@ -4,7 +4,7 @@
 :data-uri:
 :icons:
 
-Welcome to OpenShift documentation. Here you will find information and resources to help you learn about OpenShift and its features. From getting started with creating your first application to using the advanced features, these resources provide information to set up and manage your OpenShift environment.
+Welcome to ManageIQ documentation. Here you will find information and resources to help you learn about ManageIQ and its features. From getting started with creating your first application to using the advanced features, these resources provide information to set up and manage your ManageIQ environment.
 
 
 [cols="2",frame="none",grid="cols"]
@@ -13,33 +13,26 @@ Welcome to OpenShift documentation. Here you will find information and resources
 
 a|link:../getting_started/overview.html[*Getting Started*]
 
-Describes the initial steps required to begin using OpenShift and create your first application.
-
-a|link:../client_tools_install_guide/overview.html[*Installing client Tools*]
-
-These topics describe how to install and configure the OpenShift command line interface (CLI) client tools on various operating systems and prepare your workstation to communicate with the remote server.
+Describes the initial steps required to begin using ManageIQ and create your first application.
 
 a|link:../user_guide/overview.html[*User Guide*]
 
-Describes key concepts of OpenShift with instructions on how to use the features to create and manage OpenShift applications.
+Describes key concepts of ManageIQ with instructions on how to use ManageIQ.
 
-a|link:../cartridge_specification_guide/overview.html[*Developing Cartridges*]
-
-These topics provide reference information and specifications for developing custom cartridges for OpenShift.
 |===
 
-ifdef::openshift-origin,openshift-enterprise[]
-== Deploying and Managing OpenShift
-Looking for information on how to install and run this world-class Platform-as-a-Service? You got it:
+ifdef::manageiq,cfme[]
+== Deploying ManageIQ
+Looking for information on how to install and run this world-class Cloud Management Engine? You got it:
 
 * link:#[Topic 4]
 * link:#[Topic 5]
 * link:#[Topic 6]
 
 endif::[]
-ifdef::openshift-origin[]
-== Hacking on OpenShift
-Interested in getting your hands dirty and making OpenShift even better?
+ifdef::manageiq[]
+== Hacking on ManageIQ
+Interested in getting your hands dirty and making ManageIQ even better?
 
 * link:#[Topic 7]
 * link:#[Topic 8]
