Fix formatting issues

--- a/Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
+++ b/Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
@@ -1189,7 +1189,7 @@ $evm.root["miq_request"].pending`
 [options="header"]
 |====================================================================
 |Method                                 |Use
-|check_quota(quota_type, options=\{})   |Returns the quota information for the specified type
+|check_quota(quota_type, options={})   |Returns the quota information for the specified type
 |ci_type                                |Returns the cloud infrastructure type: 'vm'
 |eligible_clusters                      |Returns an array of available Cluster objects filtered by previously selected resources
 |eligible_customization_templates       |Returns an array of available Customization Templates filtered by previously selected resources
@@ -1323,7 +1323,7 @@ _Example:_
 
 _Returns:_
 
-`{:cc=>\{:name=>"001", :description=>"Cost Center 001"}, :department=>[{:name=>"accounting", :description=>"Accounting"}, {:name=>"engineering", :description=>"Engineering"}]}`
+`{:cc=>{:name=>"001", :description=>"Cost Center 001"}, :department=>[{:name=>"accounting", :description=>"Accounting"}, {:name=>"engineering", :description=>"Engineering"}]}`
 
 |get_option_last(key)                   |This method is the same as get_option, except that it returns the last array value.
 |get_option(key)                        |Returns a value from the options hash based on the name of the key name passed in. Internally many of the values are stored as an array of items. (For example, a target host would be stored as the index to the host object in the db and the display name.) Calling this method will return the first item if it is an array. For non-array values the item is returned unmodified.
@@ -1387,7 +1387,7 @@ _Returns:_
 [options="header"]
 |====================================================================
 |Method                                 |Use
-|check_quota(quota_type, options=\{})   |Returns the quota information for the specified type
+|check_quota(quota_type, options={})   |Returns the quota information for the specified type
 |eligible_clusters                      |Returns an array of available Cluster objects filtered by previously selected resources
 |eligible_customization_templates       |Returns an array of available Customization Templates
 |eligible_folders                       |Returns an array of available Folder objects filtered by previously selected resources
@@ -1784,7 +1784,7 @@ These methods can be used on Snapshots
 |remove                 |Removes specified snapshot
 |====================================================================
 
-[[⁠Datastores (storage)]] ⁠Datastores (storage)
+[[Datastores (storage)]] Datastores (storage)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [options="header"]
 |============================================⁠========================
