Fix formatting issues

--- a/Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
+++ b/Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
@@ -672,7 +672,8 @@ begin
 |refresh(*targets)          |Refresh the target types specified (ems, vm, host, src_vm, src_host, dest_vm, or dest_host)
 |====================================================================
 
-[[⁠Management System Folders (ems_folder)]] ⁠Management System Folders (ems_folder)
+
+[[Management System Folders (ems_folder)]] Management System Folders (ems_folder)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [options="header"]
 |====================================================================
