Remove incorrect characters from pandoc conversion

--- a/Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
+++ b/Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
@@ -1112,7 +1112,7 @@ _Example:_
 
 _Returns:_
 
-`[\{:name=>"accounting", :description=>"Accounting"}, {:name=>"engineering", :description=>"Engineering"}]`
+`[{:name=>"accounting", :description=>"Accounting"}, {:name=>"engineering", :description=>"Engineering"}]`
 
 |get_classifications                |Works the same as get_tag but the returned tag data is a hash with :name and :description
 
@@ -1122,7 +1122,7 @@ _Example:_
 
 _Returns:_
 
-`{:cc=>\{:name=>"001", :description=>"Cost Center 001"}, :department=>[\{:name=>"accounting", :description=>"Accounting"}, {:name=>"engineering", :description=>"Engineering"}]}`
+`{:cc=>{:name=>"001", :description=>"Cost Center 001"}, :department=>[{:name=>"accounting", :description=>"Accounting"}, {:name=>"engineering", :description=>"Engineering"}]}`
 
 |get_option(key)                    |Returns a value from the options hash based on the name of the key name passed in. Internally many of the values are stored as an array of items. (For example, a target host would be stored as the index to the host object in the db and the display name.) Calling this method will return the first item if it is an array. For non-array values the item is returned unmodified.
 
